calico-gloo-istio/calico/02-httpbin-kubernetes-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-network-policy
  namespace: httpbin
spec:
# block all ingress, allow all egress
  podSelector:
    matchLabels:
      app: httpbin
  egress:
    - {}  
  policyTypes:
    - Ingress
    - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-system
  namespace: httpbin
spec:
  podSelector:
    matchLabels:
      app: httpbin
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:      
          matchExpressions:
          - key: kubernetes.io/metadata.name
            operator: In
            values: ["kube-system"]
